Added maintenance slides.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>reveal.js - The HTML Presentation Framework</title>
+		<title>JavaScript | Front-End Developer Series</title>
 
 		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
 		<meta name="author" content="Hakim El Hattab">
@@ -35,20 +35,55 @@
 						<img src="images/carsalesFrontEnd.png" alt="Carsales Front-End"/>
 				</section>
 
-				<section data-markdown="slides/contents.md"></section>
-				
-				<section>
-					<h1>Always code as if the guy who ends up maintaining your code will be a violent psychopath who knows where you live.</h1>
-					<a href="https://twitter.com/kylerichter/status/15101151292694529">https://twitter.com/kylerichter/status/15101151292694529</a>
-				</section>
+<section data-markdown="slides/contents.md"></section>
+<section class="maintaining-js">
+<h1>A quiet chat about maintenance</h1>
+</section>
 
-				<section data-markdown="slides/introducing-js.md"></section>
+<section data-markdown="slides/maintenance-1.md"></section>
+
+<section data-markdown="slides/maintenance-2.md"></section>
+
+<section>
+	<blockquote class="twitter-tweet" lang="en" align="left" width="640"><p>Always code as if the guy who ends up maintaining your code will be a violent psychopath who knows where you live.</p>&mdash; Kyle Richter (@kylerichter) <a href="https://twitter.com/kylerichter/statuses/15101151292694529">December 15, 2010</a></blockquote>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+<script>
+(function(d){
+	var link = d.createElement('link');
+	link.rel='stylesheet';
+	link.type='text/css';
+	link.href='https://abs.twimg.com/a/1393283605/css/t1/rosetta_core.bundle.css';
+	d.head.appendChild(link);
+}(document));
+</script>
+</section>
+
+<section class="introducing-js"><h1>Introducting JavaScript</h1></section>
+
+<section data-markdown="slides/introducing-js.md"></section>
 
 
-				<section>
-					<h1>THE END</h1>
-					<h3>@pwcberry</h3>
-				</section>
+<section class="style-js"><h1>Style</h1></section>
+
+
+<section class="libraries-js"><h1>Libraries and Frameworks</h1></section>
+
+
+<section class="performance-js"><h1>Performance</h1></section>
+
+
+<section class="tools-js"><h1>Tools</h1></section>
+
+<section class="node-js"><h1>Node.js</h1></section>
+
+<section class="future-js"><h1>The Future</h1></section>
+
+
+<section>
+	<h1>The End</h1>
+	<p>@pwcberry</p>
+</section>
 
 			</div>
 
