Some more refinements to presentation

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 <section class="style-js"><h1>Programming Style</h1></section>
 
-<section class="has-quote" data-background="black">
+<section class="has-quote" data-background="#304830">
 <blockquote>
 <p>If there is a feature of the language that is sometimes problematic, and if it can be replaced with another feature that is more reliable, then always use the more reliable feature.</p>
 <cite>Douglas Crockford</cite>
@@ -112,7 +112,7 @@ if (s) {
 <section>
 <pre>
 <code class="javascript">
-// any object reference that isn't null or undefnied
+// any object reference that isn't null or undefined
 // evaluates to TRUE
 var o = {};
 if (o) {
@@ -158,7 +158,7 @@ if (!elements.length) {
 // An empty string ('') evaluates to FALSE
 var s = '';
 if (!s) {
-
+	// Do something with the empty string
 }
 </code>
 </pre>
@@ -714,7 +714,7 @@ jQuery("body").on('click', function() {
 </section>
 </section>
 
-<section class="has-quote" data-background="black">
+<section class="has-quote" data-background="#304830">
 <blockquote>
 	<p>Code in a manner that another developer, who is not familiar with JavaScript, can comprehend the intent of the code.</p>
 </blockquote>
