Some small improvements to styling

--- a/index.html
+++ b/index.html
@@ -728,8 +728,7 @@ jQuery("body").on('click', function() {
 
 <section data-markdown="slides/libraries-3.md"></section>
 
-<section class="future-js"><h1>The Future</h1></section>
-<section id="The-Future" data-markdown="slides/the-future-1.md"></section> 
+<section class="future-js" id="The-Future" data-markdown="slides/the-future-1.md"></section> 
 <section>
 <section>
 	<h2>Promises</h2>
